# DataAnalysisLabs

./: .gitignore  README.md
lab_2/: README.md  part1.ipynb  part2.ipynb  requirements.txt
lab_3/: .gitignore  README.md  lab3.ipynb  requirements.txt
lab_4/: README.md  lab4.py  requirements.txt
lab_5/: .gitignore  README.md  lab5.py  requirements.txt
lab_6/: .gitignore  CMakeLists.txt  README.md  preinstall.sh  run.sh
lab_6/include/: CameraProvider.hpp  Display.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab_6/src/: CameraProvider.cpp  Display.cpp  KeyProcessor.cpp  main.cpp
lab_7/: .gitignore  CMakeLists.txt  README.md  preinstall.sh  run.sh
lab_7/include/: FaceDetector.hpp  KeyProcessor.hpp
lab_7/src/: FaceDetector.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
